# oms_cms

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  __init__.py  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini  readthedocs.yml  req-dev.txt  req.txt  req2.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
conf/: cms.conf  gunicorn.conf.py
conf/db/: database_env
conf/nginx/conf.d/: local.conf
doc/: .buildinfo  conf.py  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/.doctrees/: environment.pickle  index.doctree
doc/.doctrees/devdoc/: installation.doctree  news.doctree  pages.doctree
doc/_static/: documentation_options.js
doc/devdoc/: installation.html  news.html  pages.html
docs/: conf.py  index.rst
docs/devdoc/: contact.rst  gallery.rst  installation.rst  languages.rst  menu.rst  news.rst  pages.rst  partners.rst  search.rst  soc_networks.rst  updates.rst
oms_cms/: dashboard.py
oms_cms/backend/: urls.py
oms_cms/backend/about/: admin.py  models.py
oms_cms/backend/comments/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
oms_cms/backend/contact/: __init__.py  admin.py  apps.py  (+5 more)
oms_cms/config/: local_settings.py  prod_settings.py  settings.py  test_settings.py  urls.py  wsgi.py
oms_cms/scripts/: create_project.py
oms_cms/templates/: base.html  super-base.html
requirements/: base.txt  dev.txt  prod.txt
scripts/: build.py
(+295 files in other folders)
